--- a/SDI_project2/sdi-project2.html
+++ b/SDI_project2/sdi-project2.html
@@ -13,6 +13,7 @@
 <article>
 <p>For this assignment, I continued my vampire hunting story from last week.</p>
 <p>The overall theme changed slightly. This time I assumed that the hunters would go out in the daytime to find the vampires while they were sleeping.</p>
+<p>I used the procedure argument to determine if the hunter had enough experience to go hunting on his own. For the string function, I let that give the option of hunting with a guide. With the boolean function, I checked to make sure that my hunter had the necessary supplies to hunt with, and output the results of the check. My array function listed the different hunting grounds the hunter would visit, and finally, the number function was used to inform the hunter how long before darkness set in.</p>
 </article>
 <footer>
     <p>8/7/2012, Wesley Seago</p>
