--- a/VFW_1209/seago_wesley_project1/index.html
+++ b/VFW_1209/seago_wesley_project1/index.html
@@ -2,24 +2,23 @@
 <!-- Wesley Seago  -->
 <!-- VFW Term 1209 -->
 <!-- Project 1     -->
-<!-- Medicine Time -->
+<!-- Medicine Tracker -->
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="Medicine Time" />
+		<meta name="description" content="Medicine Tracker" />
 		<meta name="keywords" content="html5, mobile development, Full Sail University" />
 		<meta name="robots" content="index, follow" />
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
-		<meta name="HandheldFriendly" content="True" />
-		<meta name="MobileOptimized" content="320" />
-		<title>Medicine Time</title>
+		<title>Medicine Tracker</title>
 		<link href="css/styles.css" rel="stylesheet" type="text/css" />
 		<script src="js/main.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<header>
-			<hgroup>
-			</hgroup>
+			<h1>Medicine Tracker</h1>
 		</header>
+		<h2>Keep track of your kids medications!</h2>
+		<a href="additem.html">Add Medication</a>	
 	</body>
 </html>
