--- a/VFW_1209/seago_wesley_project2/index.html
+++ b/VFW_1209/seago_wesley_project2/index.html
@@ -12,13 +12,29 @@
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
 		<title>Medicine Tracker</title>
 		<link href="css/styles.css" rel="stylesheet" type="text/css" />
-		<script src="js/main.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<header>
-			<h1>Medicine Tracker</h1>
-		</header>
-		<h2>Keep track of your kids medications!</h2>
-		<a href="additem.html">Add Medication</a>	
+		<div id="container">
+			<header>
+				<div id="header">
+					<h1>Medicine Tracker</h1>
+				</div>
+			</header>
+			<article>
+				<div id="intro">
+					<br>
+					<a href="additem.html"><h1>Add Medication</h1></a>
+					<br>
+					<br>
+					<br>
+					<h1>Keep track of your kids medications!</h1>
+				</div>
+			</article>
+			<footer>
+				<div id="footer">	
+				</div>
+			</footer>
+		</div>
+		<script src="js/main.js" type="text/javascript"></script>
 	</body>
 </html>
