--- a/VFW_1209/seago_wesley_project2/additem.html
+++ b/VFW_1209/seago_wesley_project2/additem.html
@@ -22,40 +22,25 @@
 			</div>
 			<div id="article">
 				<form action="#" method="post">
-						<h2>Patient</h2>
-							<label for = "name" ><h3>Name</h3></label>
-							<input type="text" id="name" />
-						<h2>Medication</h2>
-							<label for = "medname" ><h3>Name</h3></label>
-							<input type="text" id="medname" />
-							<h3>Type</h3>
-								<li><input type = "radio" id = "radio1" name = "type" checked="checked" /><label for = "radio1">Over the Counter</label>
-								<li><input type = "radio" id = "radio2" name = "type" /><label for = "radio2">Prescription</label>
-							<label for = "dosage" ><h3>Dosage Amount</h3></label>
-							<input id="dosage" type="range" min="100" max="500" step="50" />
-							<h3>Frequency</h3>
-							<select>
-								<option>Every 4 Hours</option>
-								<option>Every 8 Hours</option>
-								<option>Every 12 Hours</option>
-								<option>Every 24 Hours</option>
-							</select>
-							<!-- date element for this project to keep it simple. Later change this to date/time taken and timer until next dose. -->
-							<label for = "date" ><h3>Date</h3></label>
-							<input type = "datetime" id="date"/>
-							<label for = "notes" ><h3>Notes</h3></label>
-							<textarea id = "notes">
-							</textarea>
+					<ul id="questions">
+						<li label for = "name" >Name: </label><br><input type="text" id="name" /></li><br>
+						<li label for = "medname" >Medication: </label><br><input type="text" id="medname" /></li><br>
+						<li><input type = "radio" id = "otc" name = "type" checked="checked" /><label for = "radio1">Over the Counter</label>
+						<li><input type = "radio" id = "scrip" name = "type" /><label for = "radio2">Prescription</label><br><br>
+						<label for = "dosage" >Dosage Amount</label><br><input id="dosage" type="range" min="100" max="500" step="50" />
+						<li id="select"><label for="frequency">Frequency:</label><br /></li>	
+						<li label for = "date" >Date</label><br><input type = "datetime" id="date"/><br>
+						<li label for = "notes" >Notes</label><br><textarea id = "notes"></textarea>		
 					<br>
 					<br>
-					<input type = "submit" value = "Submit" id="saveData" />
+					<input type = "submit" value = "Submit" id="submit" />
 					<input type = "hidden" value = "true" />
 				</form>
 			</div>
 			<br>
 			<div id="footer">
-				<a href="#" id="clearData">Clear Stored Data</a>
-				<a href="#" id="displayData">Display Data</a>
+				<a href="#" id="clear">Clear Stored Data</a>
+				<a href="#" id="displayLink">Display Data</a>
 			</div>
 		</div>
 		<script src="js/main.js" type="text/javascript"></script>
