--- a/VFW_1209/seago_wesley_project2/index.html
+++ b/VFW_1209/seago_wesley_project2/index.html
@@ -23,7 +23,7 @@
 			<article>
 				<div id="intro">
 					<br>
-					<a href="additem.html"><h1>Add Medication</h1></a>
+						<a href="additem.html" class="button white" style="height: 24px; width: 160px">Add Medication</a>
 					<br>
 					<br>
 					<br>
