--- a/VFW_1209/seago_wesley_project3/additem.html
+++ b/VFW_1209/seago_wesley_project3/additem.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!-- Wesley Seago  -->
 <!-- VFW Term 1209 -->
-<!-- Project 2     -->
+<!-- Project 3     -->
 <!-- Medicine Tracker -->
 <html>
 	<head>
@@ -15,48 +15,52 @@
 	</head>
 	<body>
 		<div id="container">
-			<form action="#" method="post" id="medForm" />
+			<form action="#" method="post" id="medForm">
 				<div id="header">
 					<header>
 						<h1>Add Medication</h1>
 					</header>
 				</div>
-				<div id="article">
-					<!--<form action="#" method="post" id="medForm" />-->
-					<small>All Fields are Required!</small>
+					<div id="article">
+						<small>* fields are required.</small>
+						<ul id="errors"></ul>
 						<ul id="questions">
-							<li label for = "name" >Name: </label><br><input type="text" id="name" style="width: 200px" /></li>
-							<li label for = "medname" >Medication: </label><br><input type="text" id="medname" style="width: 200px" /></li>
+							<li label for = "name" >*Name: </label><br><input type="text" id="name" style="width: 200px" /></li>
+							<br>
+							<li label for = "medname" >*Medication: </label><br><input type="text" id="medname" style="width: 200px" /></li>
+							<br>
 							<li label for = "type" >Type: </label><br>
-							<input type = "radio" id="Over the Counter" name = "type" checked="checked">Over the Counter</li>
-							<input type = "radio" id="Prescription" name = "type">Prescription</li>
+								<input type = "radio" id="Over the Counter" name = "type" checked="checked">Over the Counter</li>
+								<input type = "radio" id="Prescription" name = "type">Prescription</li>
+							<br>
 							<br>
 							<li label for = "dosage" >Dosage Amount (ml): </label><br><input id="dosage" type="range" min="100" max="500" step="50" style="width: 200px" />
-							<li id="select" ><label for="frequency">Frequency:</label><br /></li>	
-								<li label for = "date" >Date: </label><br><input type = "datetime" id="date" style="width: 200px"/><br>
-								<li label for = "notes" >Notes: </label><br><textarea id = "notes" style="width: 200px" ></textarea>		
 							<br>
 							<br>
-						<input type = "submit" value = "Submit" id="submit" style="height: 44px; width: 200px"/>
-						<input type = "hidden" value = "true" />
-				</form>
-			</div>
-			<div id="footer">
-				<br>
-				<br>
-				<a href="additem.html" id="addNew" class="button white" style="display:none; height: 24px; width: 160px">Add Medication</a>
-				<br>
-				<a href="#" id="displayLink" class="button green" align="center" style="height: 24px; width: 160px">Display Data</a>
-				<br>
-				<br>
-				<a href="#" id="clear" class="button red" style="height: 24px; width: 160px">Clear Stored Data</a>
-				<br>
-				<br>
-				<!--<a href="additem.html" id="addNew" class="button white" style="display:none; height: 30px; width: 180px">Add Medication</a>-->
-				<br>
-				<small>Copyright &copy 2012 Wesley Seago</small>
-			</div>
-		</div>
+							<li id="select" ><label for="frequency">*Frequency:</label><br /></li>	
+							<br>
+							<li label for = "date" >*Date: </label><br><input type = "datetime" id="date" style="width: 200px"/><br>
+							<br>
+							<li label for = "notes" >Notes: </label><br><textarea id = "notes" style="width: 200px" ></textarea>		
+							<br>
+						</ul>
+							<div id="article2">
+								<input type = "submit" value = "Submit" id="submit"/>
+								<input type = "hidden" value = "true" />
+							</div>
+					</div>
+			</form>
+					<div id="footer">
+						<br>
+						<a href="additem.html" id="addNew" style="display:none">Add Medication</a>
+						<a href="#" id="displayLink">Display Data</a><br>
+						<br>
+						<a href="#" id="clear">Clear Stored Data</a>
+						<br>
+						<br>
+						<small>Copyright &copy 2012 Wesley Seago</small>
+					</div>
+				
 		<script src="js/main.js" type="text/javascript"></script>
 	</body>
 </html>
