--- a/VFW_1209/seago_wesley_project3/index.html
+++ b/VFW_1209/seago_wesley_project3/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!-- Wesley Seago  -->
 <!-- VFW Term 1209 -->
-<!-- Project 2     -->
+<!-- Project 3     -->
 <!-- Medicine Tracker -->
 <html>
 	<head>
@@ -23,15 +23,18 @@
 			<article>
 				<div id="intro">
 					<br>
-						<a href="additem.html" class="button white" style="height: 24px; width: 160px">Add Medication</a>
+						<a href="additem.html">Add Medication</a>
 					<br>
 					<br>
+					<h1>Keep track of your medication schedule!</h1>
 					<br>
-					<h1>Keep track of your kids medications!</h1>
 				</div>
 			</article>
 			<footer>
-				<div id="footer">	
+				<div id="footer">
+					<br>
+					<small>Copyright &copy 2012 Wesley Seago</small>
+					<br>	
 				</div>
 			</footer>
 		</div>
