Week 3 project almost complete.

--- a/VFW_1209/seago_wesley_project3/additem.html
+++ b/VFW_1209/seago_wesley_project3/additem.html
@@ -45,17 +45,17 @@
 							<br>
 						</ul>
 							<div id="article2">
-								<input type = "submit" value = "Submit" id="submit"/>
+								<input type = "submit" value = "Submit" id="submit" style="height: 40px; width: 194px"/>
 								<input type = "hidden" value = "true" />
 							</div>
 					</div>
 			</form>
 					<div id="footer">
 						<br>
-						<a href="additem.html" id="addNew" style="display:none">Add Medication</a>
-						<a href="#" id="displayLink">Display Data</a><br>
+						<a href="additem.html" id="addNew" style="display:none" class="button">Add Medication</a>
+						<a href="#" id="displayLink" class="buttonGreen">Display Data</a><br>
 						<br>
-						<a href="#" id="clear">Clear Stored Data</a>
+						<a href="#" id="clear" class="buttonRed">Clear Stored Data</a>
 						<br>
 						<br>
 						<small>Copyright &copy 2012 Wesley Seago</small>
