--- a/VFW_1209/seago_wesley_project3/index.html
+++ b/VFW_1209/seago_wesley_project3/index.html
@@ -23,7 +23,7 @@
 			<article>
 				<div id="intro">
 					<br>
-						<a href="additem.html">Add Medication</a>
+						<a href="additem.html" class="button">Add Medication</a>
 					<br>
 					<br>
 					<h1>Keep track of your medication schedule!</h1>
