--- a/VFW_1209/seago_wesley_project4/additem.html
+++ b/VFW_1209/seago_wesley_project4/additem.html
@@ -29,7 +29,7 @@
 							<li label for = "medname" >*Medication: </label><br><input type="text" id="medname" style="width: 95%" /></li>
 							<br>
 							<li label for = "type" >Type: </label><br>
-								<input type = "radio" id="otc" name = "type" value = "Over the Counter" checked="checked">Over the Counter</li>
+								<input type = "radio" id="OverTheCounter" name = "type" value = "OTC" checked="checked">Over the Counter</li>
 								<input type = "radio" id="Prescription" name = "type" Value = "Prescription">Prescription</li>
 							<br>
 							<br>
