--- a/miu_1210/seago_wesley_project1/additem.html
+++ b/miu_1210/seago_wesley_project1/additem.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!-- Wesley Seago  -->
-<!-- VFW Term 1209 -->
-<!-- Project 4     -->
+<!-- MIU Term 1210 -->
+<!-- Project 1     -->
 <!-- Medicine Tracker -->
 <html>
 	<head>
