Initial commit to gh-pages.

--- a/VFW_1209/seago_wesley_project3/additem.html
+++ b/VFW_1209/seago_wesley_project3/additem.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!-- Wesley Seago  -->
 <!-- VFW Term 1209 -->
-<!-- Project 3     -->
+<!-- Project 4     -->
 <!-- Medicine Tracker -->
 <html>
 	<head>
@@ -25,23 +25,23 @@
 						<small>* fields are required.</small>
 						<ul id="errors"></ul>
 						<ul id="questions">
-							<li label for = "name" >*Name: </label><br><input type="text" id="name" style="width: 200px" /></li>
+							<li label for = "name" >*Name: </label><br><input type="text" id="name" style="width: 95%" /></li>
 							<br>
-							<li label for = "medname" >*Medication: </label><br><input type="text" id="medname" style="width: 200px" /></li>
+							<li label for = "medname" >*Medication: </label><br><input type="text" id="medname" style="width: 95%" /></li>
 							<br>
 							<li label for = "type" >Type: </label><br>
 								<input type = "radio" id="Over the Counter" name = "type" checked="checked">Over the Counter</li>
 								<input type = "radio" id="Prescription" name = "type">Prescription</li>
 							<br>
 							<br>
-							<li label for = "dosage" >Dosage Amount (ml): </label><br><input id="dosage" type="range" min="100" max="500" step="50" style="width: 200px" />
+							<li label for = "dosage" >Dosage Amount (ml): </label><br><input id="dosage" type="range" min="100" max="500" step="50" style="width: 95%" />
 							<br>
 							<br>
-							<li id="select" ><label for="frequency">*Frequency:</label><br /></li>	
+							<li id="select"><label for="frequency">*Frequency:</label><br /></li>	
 							<br>
-							<li label for = "date" >*Date: </label><br><input type = "datetime" id="date" style="width: 200px"/><br>
+							<li label for = "date" >*Date: </label><br><input type = "datetime" id="date"/><br>
 							<br>
-							<li label for = "notes" >Notes: </label><br><textarea id = "notes" style="width: 200px" ></textarea>		
+							<li label for = "notes" >Notes: </label><br><textarea id = "notes" style="width: 95%" ></textarea>		
 							<br>
 						</ul>
 							<div id="article2">
@@ -60,7 +60,7 @@
 						<br>
 						<small>Copyright &copy 2012 Wesley Seago</small>
 					</div>
-				
+		<script src="js/json.js" type="text/javascript"></script>		
 		<script src="js/main.js" type="text/javascript"></script>
 	</body>
 </html>
