--- a/miu_1210/seago_wesley_project1/additem.html
+++ b/miu_1210/seago_wesley_project1/additem.html
@@ -14,6 +14,7 @@
 		<link href="css/styles.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
+		<div id="container2">
 			<form action="#" method="post" id="medForm">
 				<div id="header">
 					<header>
@@ -50,6 +51,7 @@
 						<br>
 						<small>Copyright &copy 2012 Wesley Seago</small>
 					</div>
+		</div>
 		<script src="js/json.js" type="text/javascript"></script>		
 		<script src="js/main.js" type="text/javascript"></script>
 	</body>
