--- a/miu_1210/seago_wesley_project1/index.html
+++ b/miu_1210/seago_wesley_project1/index.html
@@ -22,12 +22,33 @@
 			</header>
 			<article>
 				<div id="intro">
+					<h1>Keep track of your medication schedule!</h1>
 					<br>
 						<a href="additem.html" class="button">Add Medication</a>
 					<br>
 					<br>
-					<h1>Keep track of your medication schedule!</h1>
 					<br>
+				</div>
+				<div id="searchbox">
+					<form id="search" method="get">
+						<input type="search" id="s" name="s" size="32"> 
+						<input type="submit" value="Search">
+					</form>
+				</div>	
+				<div id="browsebox">
+					<h1>Browse</h1>		
+				</div>	
+				<div id="browsename">
+					<a href="#"><h2>Name</h2></a>
+				</div>
+				<div id="browsemed">
+					<a href="#"><h2>Medication Name</h2></a>
+				</div>
+				<div id="browsetype">
+					<a href="#"><h2>Medication Type</h2></a>
+				</div>
+				<div id="browseresearch">
+					<a href="#"><h2>Medication Research</h2></a>
 				</div>
 			</article>
 			<footer>
