--- a/miu_1210/seago_wesley_project1/index.html
+++ b/miu_1210/seago_wesley_project1/index.html
@@ -22,7 +22,7 @@
 			</header>
 			<article>
 				<div id="intro">
-					<h1>Keep track of your medication schedule!</h1>
+					<h1>Keep Track of Your Medication Schedule!</h1>
 					<br>
 						<a href="additem.html" class="button">Add Medication</a>
 					<br>
