Project 1 almost done.

--- a/miu_1210/seago_wesley_project1/index.html
+++ b/miu_1210/seago_wesley_project1/index.html
@@ -48,7 +48,10 @@
 					<a href="#"><h2>Medication Type</h2></a>
 				</div>
 				<div id="browseresearch">
-					<a href="#"><h2>Medication Research</h2></a>
+					<a href="#"><h2>Research</h2></a>
+				</div>
+				<div id="browsedate">
+					<a href="#"><h2>Date</h2></a>
 				</div>
 			</article>
 			<footer>
